# apfmalloc-testing

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  _build.rs  build.rs
benchmarks/results/: t-test1-libc.txt
benchmarks/sources/common/: cpuinfo.h
benchmarks/sources/t-test1/: Makefile  t-test.h  t-test1.c
benchmarks/sources/t-test2/: Makefile  t-test.h  t-test2.c
src/: age_checker.rs  benchmark.rs  grapher.rs  main.rs
