[package]
name = "lrmalloc-rs-testing"
version = "0.1.0"
authors = ["Joshua Radin <jradin16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
cc = "1.0.58"

[build-dependencies]
cc = "1.0.58"